--- a/about.html
+++ b/about.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <head>
+      <meta
+        name="description"
+        content="Front-end developer from Venezuela based in Paris. Website development projects done remotely."
+      />
+    </head>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +22,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/style.css" />
-    <title>About Victoria Moreno</title>
+    <title>About Victoria Moreno: presentation and coding projects</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light fixed-top">
@@ -62,28 +68,32 @@
       <div class="col-md-4">
         <img
           src="images/yoga-app.png"
-          alt="yoga-app"
+          alt="Yoga App"
           class="img-fluid rounded shadow-sm p-2 border"
         />
       </div>
       <div class="col-md-4">
         <img
           src="images/weather-app.png"
-          alt="weather-app"
+          alt="Weather App"
           class="img-fluid rounded shadow-sm p-2 border"
         />
       </div>
       <div class="col-md-4">
         <img
           src="images/yogurt-app.png"
-          alt="yogurt-app"
+          alt="Yogurt App"
           class="img-fluid rounded shadow-sm p-2 border"
         />
       </div>
     </div>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:mvictoriamorenoh@gmail.com" class="email-link">
+      <a
+        href="mailto:mvictoriamorenoh@gmail.com"
+        class="email-link"
+        title="Contact Victoria here"
+      >
         mvictoriamorenoh@gmail.com
       </a>
     </div>
